# certilab-adaptive-rag

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  LICENSE  Makefile  README.md  deep-research-report.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
app/: config.py  logging.py
app/adaptive_rag/: __init__.py  demo.py  grader.py  graph.py  ingest.py  nodes.py  state.py
app/ingestion/: indexer.py  mysql_loader.py  pdf_extractor.py  splitter.py
app/observability/: phoenix.py
app/retrieval/: constants.py  protocols.py  qdrant_index.py
app/security/: access_control.py  payload_sanitizer.py
app/tools/: embeddings.py  mysql_connector.py  openai_client.py  web_search.py
data/sql/: seed.sql
docs/: course-alignment.md  entrega.md
notebooks/: adaptive_rag_demo.ipynb
scripts/: generate_social_preview.py  restore_qdrant.py
tests/: conftest.py  test_grader.py  test_graph_integration.py  test_ingest_helpers.py  test_nodes.py  test_routing.py
