[project]
name = "certilab-adaptive-rag"
version = "1.0.0"
description = "Adaptive RAG system with LangGraph, OpenAI, and Tavily"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "openai>=1.40.0",
    "tavily-python>=0.5.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "structlog>=26.1.0",
    "pymupdf>=1.28.0",
    "camelot-py[cv]>=2.0.0",
    "unstructured[local-inference,pdf]>=0.23.1",
    "pi-heif>=1.4.0",
]

[project.optional-dependencies]
real = [
    "qdrant-client>=1.9.0",
    "pymysql>=1.1.0",
    "boto3>=1.34.0",
    "pdfplumber>=0.11.10",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[project.scripts]
adaptive-rag = "app.adaptive_rag.demo:main"
adaptive-rag-ingest = "app.adaptive_rag.ingest:main"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["notebooks/", "samples/", "scripts/"]

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
